add_executable(smt_frontend_tst smt_frontend.cpp)
target_link_libraries(smt_frontend_tst ${EXTRA_LIBS})
add_test(smt_frontend ${CMAKE_CURRENT_BINARY_DIR}/smt_frontend_tst)
add_executable(smt_scanner smt_scanner.cpp)
target_link_libraries(smt_scanner ${EXTRA_LIBS})
add_test(smt_scanner ${CMAKE_CURRENT_BINARY_DIR}/smt_scanner)
add_executable(smt_parser smt_parser.cpp)
target_link_libraries(smt_parser ${EXTRA_LIBS})
add_test(smt_parser ${CMAKE_CURRENT_BINARY_DIR}/smt_parser)
add_executable(smt_pp smt_pp.cpp)
target_link_libraries(smt_pp ${EXTRA_LIBS})
add_test(smt_pp ${CMAKE_CURRENT_BINARY_DIR}/smt_pp)
